--- a/src/App.css
+++ b/src/App.css
@@ -56,6 +56,12 @@
   justify-content: space-between;
 }
 
+.addBookForm {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .addBookForm input {
   display: block;
 }
